--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   },
   "homepage": "https://github.com/nickdmrco/teamGen#readme",
   "dependencies": {
-    "json": "^10.0.0"
-  }
+    "json": "^10.0.0",
+    "node": "^15.2.1"
+  },
+  "devDependencies": {}
 }
