--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/nickdmrco/teamGen#readme",
   "dependencies": {
+    "inquirer": "^7.3.3",
     "json": "^10.0.0",
     "node": "^15.2.1"
   },
